; ModuleID = '/home/carl/AnghaBench/kphp-kdb/KPHP/extr_php-engine.c_get_target_impl.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/KPHP/extr_php-engine.c_get_target_impl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.conn_target = type { i32 }

@Targets = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @get_target_impl(%struct.conn_target* %0) #0 {
  %2 = alloca %struct.conn_target*, align 8
  %3 = alloca %struct.conn_target*, align 8
  %4 = alloca i32, align 4
  store %struct.conn_target* %0, %struct.conn_target** %2, align 8
  %5 = load %struct.conn_target*, %struct.conn_target** %2, align 8
  %6 = call %struct.conn_target* @create_target(%struct.conn_target* %5, i32* null)
  store %struct.conn_target* %6, %struct.conn_target** %3, align 8
  %7 = load %struct.conn_target*, %struct.conn_target** %3, align 8
  %8 = load i32, i32* @Targets, align 4
  %9 = sext i32 %8 to i64
  %10 = sub i64 0, %9
  %11 = getelementptr inbounds %struct.conn_target, %struct.conn_target* %7, i64 %10
  %12 = ptrtoint %struct.conn_target* %11 to i32
  store i32 %12, i32* %4, align 4
  %13 = load i32, i32* %4, align 4
  ret i32 %13
}

declare dso_local %struct.conn_target* @create_target(%struct.conn_target*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
